<resources>
    <string name="app_name">Anki Helper</string>
    <string name="tv_plan_name">Plan Name:</string>
    <string name="title_plan_editor">📝Plan Editor</string>
    <string name="title_script_content_editor">📝Script Content</string>
    <string name="tv_select_deck">Deck:</string>
    <string name="tv_select_model">Model:</string>
    <string name="tv_choose_dictionary">Dictionary:</string>
    <string name="api_not_available_message">Api not available!</string>
    <string name="permission_denied">Permission Denied！</string>
    <string name="dialog_ask_permission_overlays">The lack of suspended window permission, or can not use the floating ball function!</string>
    <string name="dialog_btn_go_to_permission_window">GO TO SET PERMISSION</string>
    <string name="cancel_after_add">Close popup after adding</string>
    <string name="monite_clipboard">Monitor Clipboard</string>
    <string name="title_plans_manager_str">Plans Manager</string>
    <string name="str_added">Added</string>
    <string name="str_failed_add">Failed! Please check plan settings.</string>
    <string name="str_plan_name_should_not_be_blank">Plan name can\'t be blank!</string>
    <string name="plan_already_exists">Plan name already exists!</string>
    <string name="dialog_note">Note</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_tag">Tag(seperated by\',\')</string>
    <string name="tag_cant_be_blank">Tag can\'t be blank!</string>
    <string name="definition_not_found">Definition not found</string>
    <string name="str_about">About</string>
    <string name="about_message">I\'m Zha Maomiao(aka mmjang), this project is open-sourced. <a href="https://github.com/mmjang/ankihelper">Check it out on github.</a></string>
    <string name="confirm_deletion">Delete?</string>
    <string name="save_plan_error_all_blank">Failed to save. All fields are empty!</string>
    <string name="plan_anki_not_started">please start ankidroid first!</string>
    <string name="title_custom_dicitonary_str">Custom Dictionaries</string>
    <string name="title_mdict_str">📗Mdx Dict</string>
    <string name="title_activity_mdict_editor">Mdict editor</string>
    <string name="title_tango_str">📘Tango Dict</string>
    <string name="title_popupwindow_settings_str">📰Popup Window Settings</string>
    <string name="title_floating_settings_str">🛸Floating Button</string>
    <string name="title_intelligencewindow_settings_str">🧠Intelligence</string>
    <string name="title_matheditor_window_str">📝Latex Editor</string>
    <string name="title_custom_fanyi_engine_api">🐻Translation Engine</string>
    <string name="btn_open_ocrwindow_settings_str">️Tesseract Ocr</string>
    <string name="name_mathpix_ocr">Mathpix Ocr</string>
    <string name="btn_open_mlkit_ocrwindow_settings_str">️Text recognition</string>
    <string name="til_ocr_hint_processing">...</string>
    <string name="til_ocr_hint_result">Content:</string>
    <string name="tv_popup_font_size">BigBang Font Size: %d</string>
    <string name="switch_float_ball">Open Float Ball</string>
    <string name="tv_open_accessibility">Accessibility service</string>
    <string name="tv_open_overlays">Overlays Permission</string>
    <string name="switch_clear_searched">Clear copied text after Search</string>
    <string name="switch_copy_marked">Copy marked text</string>
    <string name="tv_popup_toolbar_buttons">Toolbar Buttons</string>
    <string name="tv_popup_floating">Floating</string>
    <string name="tv_popup_deck">Deck</string>
    <string name="tv_popup_text">Text</string>
    <string name="tv_popup_other">Other</string>
    <string name="switch_popup_symbol">Allow Selecting Symbol</string>
    <string name="switch_automatic_translation">Automatic Translation</string>
    <string name="switch_popup_add_scroll_bottom">Add Bottom</string>
    <string name="switch_popup_add_search">Add Search</string>
    <string name="switch_popup_add_note">Add Note</string>
    <string name="tv_preview">Preview</string>
    <string name="html_tag_bold"><b>b</b></string>
    <string name="html_tag_italic"><i>i</i></string>
    <string name="html_tag_br">br</string>
    <string name="html_tag_h1">h1</string>
    <string name="html_tag_h2">h2</string>
    <string name="html_tag_h3">h3</string>
    <string name="html_tag_a">a</string>
    <string name="switch_popup_add_tag">Add Tag</string>
    <string name="switch_popup_add_copy">Add Copy</string>
    <string name="tv_floating_alpha">Alpha</string>
    <string name="tv_video_clear_cache">Clear Video Cache</string>
    <string name="tv_choose_translation_engine">Choose Translation Engine</string>
    <string name="tv_select_mathpix_request_parameters">Select the Request Parameters</string>
    <string name="tv_cache_has_been_clear">Cache has been clear</string>
    <string name="switch_popup_deck">Allow Selecting Deck</string>
    <string name="switch_popup_ignoree_deck_scheme">Ignore the Deck of the Scheme</string>
    <string name="title_activity_tango_location_editor">Tango location editor</string>
    <string name="add_custom_dictionary_str">Import custom dictionary</string>
    <string name="delete_all_custom_dictionary">Clear imported dictionaries</string>
    <string name="delete_all_mdict">Clear imported dictionaries</string>
    <string name="confirm_add_default_plan">No plans found, add default?</string>
    <string name="confirm_use_mathpix">Use Mathpix？</string>
    <string name="default_plan_added">Default plan added, check out at plans manager</string>
    <string name="btn_path_str">Ankidroid Path</string>
    <string name="btn_help_str">Help</string>
    <string name="btn_about_and_support_str">Donate</string>
    <string name="confirm_add_default_plan_when_exists_already">Add default plan(Collins dictionary)?</string>
    <string name="btn_add_default_plan_str">add default plan</string>
    <string name="duplicate_plan_name_complain">Default plan already exists, delete it in plans manager first.</string>
    <string name="toast_no_available_plan">No usable plan, add one in the main window of ankihelper.</string>
    <string name="left_hand_mode">Left Hand Mode</string>
    <string name="str_add_qq_group">Join QQ Group</string>
    <string name="str_clipboard_service_running">Clipboard Monitor is Running</string>
    <string name="str_field_map">Fields Mapping\\Mode:</string>
    <string name="str_field_map_normal">Normal</string>
    <string name="str_field_map_append">Append</string>
    <string name="str_only_one_plan_cant_switch">There is only one plan, not switchable.</string>
    <string name="str_btn_open_random_quote">Random Content</string>
    <string name="str_pink_theme_q">Pink Theme</string>
    <string name="str_dark_mode_q">Dark Mode</string>
    <string name="str_color_theme_q">Color Theme</string>
    <string name="str_error_noteid">failed to add note id</string>
    <string name="str_error_notetype_noncompatible">note failed to update. Note type not compatible</string>
    <string name="str_note_updated">note updated!</string>
    <string name="str_error_note_update">note failed to update!</string>
    <string name="str_cancel_note_add">Canceled</string>
    <string name="error_note_cancel">Failed to cancel</string>
    <string name="str_not_cancelable_append_mode">No cancellable in append mode</string>
    <string name="str_export_plans">Export plans to clipboard</string>
    <string name="str_import_plans">Import plans from clipbaord</string>
    <string name="str_delete_all_plans">Clear imported plans</string>
    <string name="toast_import_multi">Importing takes more time, waiting please.</string>
    <string name="title_activity_stat">📈Statistics</string>
    <string name="capture_tips">Take a screenshot of the area on the screen</string>
    <string name="capture_all">Click TO Capture Full Screen</string>
    <string name="capture_type_rect">Rectangular selection</string>
</resources>