<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mmjang.ankihelper.ui.floating.screenshot.MarkSizeView
        android:id="@+id/mark_size"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:vertexColor="?attr/colorPrimaryDark"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="2dp"
        app:cancleButtonRes="@drawable/ic_cancel"
        app:confirmButtonRes="@drawable/ic_confirm" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mark_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/capture_type_rect"
        android:textColor="@color/popup_background"
        android:textSize="@dimen/text_size_huge" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/capture_tips"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:text="@string/capture_tips"
        android:gravity="center"
        android:textColor="@color/popup_background"
        android:textSize="@dimen/text_size_huge"
        android:layout_height="wrap_content" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/capture_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/capture_all"
        android:textColor="@color/popup_background"
        android:textSize="@dimen/text_size_huge" />
</RelativeLayout>